@@ -5,6 +5,10 @@ Version 5.0.5 (unreleased)
 Bug fixes
 ---------
 
+- When importing CGNS files and requiring additional groups for mesh
+  sections or zones, do not try to build boundary face groups based
+  on vertex boundary conditions; fixes crash in this combination.
+
 - Salome_CFD: symbolic link files bug fixed.
 
 Release 5.0.4 (Aug 24 2017)
